[project]
name = "goa_semantic_tools-validation-tools"
version = "0.1.0"
description = "Validation and analysis tools for goa_semantic_tools"
readme = "README.md"
requires-python = ">= 3.14"
dependencies = [
    "goa_semantic_tools",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.uv.sources]
goa_semantic_tools = { workspace = true }
